--- a/app/views/home/inssurance.html.erb
+++ b/app/views/home/inssurance.html.erb
@@ -32,7 +32,7 @@
           </div>
           <div class="row">
             <div class="col-md-12">
-              <label>Your Purpose</label>
+              <label>Chose Product</label>
               <%= f.select(:loan_purpose, @inssurance.loan_reasons, class: "form-control") %>
             </div>
           </div>
