(Fixed) ror chart added.

--- a/app/views/home/business_loan.html.erb
+++ b/app/views/home/business_loan.html.erb
@@ -64,24 +64,26 @@
     <div class="col-md-12">
       <br>
       <p class="pl-ser"><strong>Business Loan Details</strong></p>
-      <table class="table">
-        <tr>
-          <td>Interest Rate</td>
-          <td>18% Onwards</td>
-        </tr>
-        <tr>
-          <td>Processing Fee</td>
-          <td>Up to 3% on loan amt.</td>
-        </tr>
-        <tr>
-          <td>Loan Period</td>
-          <td>5 years</td>
-        </tr>
-        <tr>
-          <td>Lowest EMI per lac</td>
-          <td>2539 for 5 years</td>
-        </tr>
-      </table>
+      <div class="row table-responsive">
+        <table class="table">
+          <tr>
+            <td>Interest Rate</td>
+            <td>18% Onwards</td>
+          </tr>
+          <tr>
+            <td>Processing Fee</td>
+            <td>Up to 2% on loan amt.</td>
+          </tr>
+          <tr>
+            <td>Loan Period</td>
+            <td>5 years</td>
+          </tr>
+          <tr>
+            <td>Lowest EMI per lac</td>
+            <td>2539 for 5 years</td>
+          </tr>
+        </table>
+      </div>
       <ul>
         <li>Compare and get lowest interest bearing business loan offers for salaried and self-employed.</li>
         <li>Option of flexi loans and zero prepayment charges also available.</li>
