--- a/app/views/home/gold_loan.html.erb
+++ b/app/views/home/gold_loan.html.erb
@@ -54,6 +54,27 @@
   <div class="row">
     <div class="col-md-12">
       <br>
+      <p class="pl-ser"><strong>Gold Loan Details</strong></p>
+      <div class="row table-responsive">
+        <table class="table">
+          <tr>
+            <td>Interest Rate</td>
+            <td>1% Onwards(Per Month)</td>
+          </tr>
+          <tr>
+            <td>Processing Fees</td>
+            <td>Up to 0.5% on loan amt.</td>
+          </tr>
+          <tr>
+            <td>Loan Period</td>
+            <td>1 years</td>
+          </tr>
+          <tr>
+            <td>Lowest EMI per lac</td>
+            <td>8885 for 10 years</td>
+          </tr>
+        </table>
+      </div>
       <p>Getting a Gold Loan is simple. Anyone having gold lying in the locker as jewelry can use it by pledging it in the bank or Non-Banking Financial Institution to get loan against it. Gold Loan is a practical way to arrange funds without touching or breaking your long-term investments. Since price of gold is shooting up with each passing phase, borrower can expect to get good value against gold.</p>
       <p class="pl-ser">Eligibility to Apply For Gold Loan</p>
       <p>You can be a farmer, trader, salaried employee or an entrepreneur between the age of 21 and 70 years to apply for gold loan. KYC is all that you are required to submit in terms of documents.</p>
