--- a/app/views/home/home_loan.html.erb
+++ b/app/views/home/home_loan.html.erb
@@ -63,6 +63,27 @@
   <div class="row">
     <div class="col-md-12">
       <br>
+      <p class="pl-ser"><strong>Home Loan Details</strong></p>
+      <div class="row table-responsive">
+        <table class="table">
+          <tr>
+            <td>Interest Rate</td>
+            <td>6.75% Onwards</td>
+          </tr>
+          <tr>
+            <td>Login Fees</td>
+            <td>Rs. 5999 /-</td>
+          </tr>
+          <tr>
+            <td>Loan Period</td>
+            <td>30 years</td>
+          </tr>
+          <tr>
+            <td>Lowest EMI per lac</td>
+            <td>1150 for 10 years</td>
+          </tr>
+        </table>
+      </div>
       <p class="pl-ser">The Best Bank for Your Home Loan</p>
       <p>Before you start documentation process for a home loan we help you compare loans offered by different banks, and financial institutions offering loans to buy or build a home. Comparison includes the processing fee, interest rate, Loan-to-Value (LTV) ratio, and loan repayment duration offered by various banks. We also help you check your eligibility for Pradhan Mantri Awaas Yojana and if you are eligible for it, we help you to get the benefit.</p>
       <p>We also use home loan EMI calculator to give you an idea about your EMI based on above factors. Get ready to compare home loans offered by various banks.  We keep our eyes open to special home loan offers offered by banks from time to time that we apprise you of when you reach out to us. What sets us apart is that through personalized service we understand your requirements before suggesting best banks to apply for home loans. Age limit for applying for home loan is between 21 and 60 years.</p>
