--- a/app/views/home/inssurance.html.erb
+++ b/app/views/home/inssurance.html.erb
@@ -53,6 +53,31 @@
   <div class="row">
     <div class="col-md-12">
       <br>
+      <p class="pl-ser"><strong>Insurance Details</strong></p>
+      <div class="row table-responsive">
+        <table class="table">
+          <tr>
+            <td>HEATH INSURANCE</td>
+            <td>LIFE INSURANCE</td>
+          </tr>
+          <tr>
+            <td>INVESTMENT PLAN</td>
+            <td>GUARANTEED RETURN PLAN</td>
+          </tr>
+          <tr>
+            <td>CHILD SAVING PLAN</td>
+            <td>TAX SAVING PLAN</td>
+          </tr>
+          <tr>
+            <td>HOME INSURNACE</td>
+            <td>CAR INSURANCE</td>
+          </tr>
+          <tr>
+            <td>2 WHEELER INSURANCE</td>
+            <td></td>
+          </tr>
+        </table>
+      </div>
       <p>We hand-hold you when it comes to settling the claims and getting maximum benefit from insurance company.</p>
       <p>We have so far settled claims amount to 11 crore for our clients.</p>
       <p>When you contact us to buy insurance, we make sure you leave happy and satisfied. Whichever insurance that you may have in mind, if this is the first time you’re buying insurance; our Relationship Manger will offer the help and answer all your questions. </p>
