--- a/app/views/home/loan_against_property.html.erb
+++ b/app/views/home/loan_against_property.html.erb
@@ -63,6 +63,27 @@
   <div class="row">
     <div class="col-md-12">
       <br>
+      <p class="pl-ser"><strong>Loan Against Property Details</strong></p>
+      <div class="row table-responsive">
+        <table class="table">
+          <tr>
+            <td>Interest Rate</td>
+            <td>8.5% Onwards</td>
+          </tr>
+          <tr>
+            <td>Login Fees</td>
+            <td>Rs. 5999 /-</td>
+          </tr>
+          <tr>
+            <td>Loan Period</td>
+            <td>20 years</td>
+          </tr>
+          <tr>
+            <td>Lowest EMI per lac</td>
+            <td>1240 for 10 years</td>
+          </tr>
+        </table>
+      </div>
       <p class="pl-ser">How can you use Loan against Property (LAP)</p>
       <p>Anyone can apply for loan against property by pledging their residential or commercial property to meet their personal or business needs. You may apply for this loan and use the money to buy new property, funds to expand your business or build infrastructure, debt consolidation to lower cash outflows, holiday, marriage, education etc.  You can avail up to 60% to 70% of the value of property as loan against property.</p>
       <p>Before taking your case to the bank we’ll assess and improve the chances of your getting the loan by evaluating your financial position and value of property.</p>
