--- a/app/views/home/new_car_loan.html.erb
+++ b/app/views/home/new_car_loan.html.erb
@@ -63,6 +63,27 @@
   <div class="row">
     <div class="col-md-12">
       <br>
+      <p class="pl-ser"><strong>New Car Loan Details</strong></p>
+      <div class="row table-responsive">
+        <table class="table">
+          <tr>
+            <td>Interest Rate</td>
+            <td>7% Onwards</td>
+          </tr>
+          <tr>
+            <td>Processing Fees</td>
+            <td>Up to 2% on loan amt.</td>
+          </tr>
+          <tr>
+            <td>Loan Period</td>
+            <td>10 years</td>
+          </tr>
+          <tr>
+            <td>Lowest EMI per lac</td>
+            <td>1161 for 10 years</td>
+          </tr>
+        </table>
+      </div>
       <p class="pl-ser">Eligibility - Who Can Apply For Car Loan</p>
       <p>There are many banks offering loans to buy a new car. Also referred to as auto loans (loans for automobile) can be availed of by salaried employees, businessmen, professionals, and corporate. Some banks also offer car loan or vehicle loan to NRIs and PIOs.</p>
       <p class="pl-ser">Financing & Interest Rates</p>
