--- a/app/views/home/professional_loan.html.erb
+++ b/app/views/home/professional_loan.html.erb
@@ -64,6 +64,27 @@
   <div class="row">
     <div class="col-md-12">
       <br>
+      <p class="pl-ser"><strong>Professional Loan Details</strong></p>
+      <div class="row table-responsive">
+        <table class="table">
+          <tr>
+            <td>Interest Rate</td>
+            <td>10.50% Onwards</td>
+          </tr>
+          <tr>
+            <td>Processing Fee</td>
+            <td>Up to 2% on loan amt.</td>
+          </tr>
+          <tr>
+            <td>Loan Period</td>
+            <td>5 years</td>
+          </tr>
+          <tr>
+            <td>Lowest EMI per lac</td>
+            <td>2149 for 5 years</td>
+          </tr>
+        </table>
+      </div>
       <p>Chartered Accountants, Company Secretaries, Doctors, & Architects are the standard four types of professionals who are eligible to apply for professional loans. All the leading banks have provision for these loans. Some banks also accommodate more in the category of professionals. When you talk to us and give us a brief on your profile and requirements we can present the right options to you.</p>
       <p>All such professional may apply for these loans for various needs, starting from setting up their offices or meet long and short term professional goals. Like already mentioned some banks also provide loans to salaried and non-individuals such as diagnostic centers and hospitals.</p>
       <p>If you belong to any of the above professions and seek loan, we can help you get it within a short span of time and minimum paperwork and running around. Our team has helped many professionals to get a quick approval and disbursement of their loan amount.</p>
