--- a/app/views/home/transfer_home_loan.html.erb
+++ b/app/views/home/transfer_home_loan.html.erb
@@ -63,6 +63,27 @@
   <div class="row">
     <div class="col-md-12">
       <br>
+      <p class="pl-ser"><strong>Transfer Home Loan Details</strong></p>
+      <div class="row table-responsive">
+        <table class="table">
+          <tr>
+            <td>Interest Rate</td>
+            <td>6.60% Onwards</td>
+          </tr>
+          <tr>
+            <td>Login Fees</td>
+            <td>Rs. 3500 /-</td>
+          </tr>
+          <tr>
+            <td>Loan Period</td>
+            <td>30 years</td>
+          </tr>
+          <tr>
+            <td>Lowest EMI per lac</td>
+            <td>1140 for 10 years</td>
+          </tr>
+        </table>
+      </div>
       <p>Home Loan Transfer is the process of transferring home loan from existing bank to a new bank that offers the same at lower interest rates that what you’re already paying. You are eligible to transfer your home loan from your existing bank to another if you have regularly paid a minimum of 6-12 month EMI.</p>
       <p>We help you get a home loan transferred with repayment tenure not exceeding 30 years.</p>
       <p>Loan limits: 500,000 onwards.</p>
