--- a/app/views/home/used_car_loan.html.erb
+++ b/app/views/home/used_car_loan.html.erb
@@ -65,6 +65,27 @@
   <div class="row">
     <div class="col-md-12">
       <br>
+      <p class="pl-ser"><strong>Used Car Loan Details</strong></p>
+      <div class="row table-responsive">
+        <table class="table">
+          <tr>
+            <td>Interest Rate</td>
+            <td>10.50% Onwards</td>
+          </tr>
+          <tr>
+            <td>Processing Fees</td>
+            <td>Up to 2% on loan amt.</td>
+          </tr>
+          <tr>
+            <td>Loan Period</td>
+            <td>5 years</td>
+          </tr>
+          <tr>
+            <td>Lowest EMI per lac</td>
+            <td>2149 for 10 years</td>
+          </tr>
+        </table>
+      </div>
       <p class="pl-ser">Pre-owned Car Loan Financing Options with Flexible Loan Tenures</p>
       <p>If you’re planning to buy pre-owned car or repurchase an old car, we can suggest best options and procedure to buy the car of your choice in the easiest quickest manner.</p>
       <p>Once you connect with us we will tell you everything related to procuring it, from used car loan eligibility, fee and charges, will calculate EMI for you and more.</p>
