--- a/app/views/home/personal_loan.html.erb
+++ b/app/views/home/personal_loan.html.erb
@@ -62,6 +62,27 @@
   <div class="row">
     <div class="col-md-12">
       <br>
+      <p class="pl-ser"><strong>Personal Loan Details</strong></p>
+      <div class="row table-responsive">
+        <table class="table">
+          <tr>
+            <td>Interest Rate</td>
+            <td>10.50% Onwards</td>
+          </tr>
+          <tr>
+            <td>Processing Fee</td>
+            <td>Up to 2 % on loan amt.</td>
+          </tr>
+          <tr>
+            <td>Loan Period</td>
+            <td>5 years</td>
+          </tr>
+          <tr>
+            <td>Lowest EMI per lac</td>
+            <td>2149 for 5 years</td>
+          </tr>
+        </table>
+      </div>
       <p class="pl-ser"><strong>How can you use Personal Loan?</strong></p>
       <p>Personal loan helps you to meet a wide range of financial requirements that may include medical crises, home improvement or renovation, education, debt consolidation, travel, or wedding</p>
       <p class="pl-ser"><strong>What is the Rate of Interest for Personal Loan?</strong></p>
