--- a/app/views/home/transfer_personal_loan.html.erb
+++ b/app/views/home/transfer_personal_loan.html.erb
@@ -62,6 +62,27 @@
   <div class="row">
     <div class="col-md-12">
       <br>
+      <p class="pl-ser"><strong>Transfer Personal Loan Details</strong></p>
+      <div class="row table-responsive">
+        <table class="table">
+          <tr>
+            <td>Interest Rate</td>
+            <td>10.25% Onwards</td>
+          </tr>
+          <tr>
+            <td>Processing Fee</td>
+            <td>Up to 2% on loan amt.</td>
+          </tr>
+          <tr>
+            <td>Loan Period</td>
+            <td>5 years</td>
+          </tr>
+          <tr>
+            <td>Lowest EMI per lac</td>
+            <td>2137 for 5 years</td>
+          </tr>
+        </table>
+      </div>
       <p class="pl-ser"><strong>Personal Loan Transfer Eligibility</strong></p>
       <p>If you are over 21 and have taken personal loan from one bank and want to transfer it to another, there are certain eligibility criteria the applicant has to meet, which depends on your repayment capacity to repay the loan along with your creditworthiness.  Other criteria are mentioned as under:</p>
       <p>For example, the applicant must have a running personal loan from another bank.</p>
