--- a/app/views/transfer_personal_loan/step4.html.erb
+++ b/app/views/transfer_personal_loan/step4.html.erb
@@ -1,5 +1,5 @@
 <section class="business-loan-section custom-container">
-  <div class="container tp-container">
+  <div class="container p-container">
     <%= form_for @transfer_personal_loan, :url => { :action => "updated_address"}, html: { id:  "transfer_personal_loan_address", class: "transfer_personal_loan_address" } do |f| %>
       <div class="container">
         <div class="row heading">
