--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="container p-container">
       <div class="row regist-div">
         <div class="col-md-5">
-          <%= image_tag "signin.png" %>
+          <%= image_tag "signin.jpg" %>
         </div>
         <div class="col-md-7">
           <div class="row">
@@ -64,7 +64,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="actions">
-                <%= f.submit "Updated Profile" %>
+                <%= f.submit "Updated Profile", class: 'btn btn-custom' %>
               </div>
             </div>
           </div>
