--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,3 +1,10 @@
+.p-container {
+  padding: 0px 15px 15px 15px;
+  box-shadow: 0 2px 4px 0 #052f5f0a, 0 12px 16px 0 #bae8cf99;
+  border-radius: 10px;
+  padding-right: 0px;
+  padding-left: 0px;
+}
 .select2-container {
   border: 1px solid #e4e4e4;
   border-radius: 4px 4px;
