--- a/app/views/transfer_personal_loan/step2.html.erb
+++ b/app/views/transfer_personal_loan/step2.html.erb
@@ -1,5 +1,5 @@
 <section class="personal-loan-section custom-container">
-  <div class="tp-container container">
+  <div class="p-container container">
     <%= form_for @transfer_personal_loan, :url => { :action => "update_employer" }, html: {id:  "transfer_personal_loan", class: "transfer_personal_loan"} do |f| %>
       <div class="container">
         <div class="row heading">
