--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,18 +1,4 @@
-<section id="secondary-banner" class="dynamic-image-5">
-  <div class="container">
-    <div class="row align-items-end">
-      <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-        <h2>Change your password</h2>
-        <h4></h4>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-        <ul class="breadcrumb">
-          <li><a href="#">Home</a></li>
-          <li>Forgot your password?</li>
-        </ul>
-      </div>
-    </div>
-  </div>
+<section id="forget-password-section">
 </section>
 <section class="personal-loan-section custom-container">
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
@@ -42,7 +28,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="actions">
-                <%= f.submit "Change my password" %>
+                <%= f.submit "Change my password", class: 'btn btn-custom' %>
               </div>        
             </div>
             <div class="col-md-6 text-right">
