(Fixed) table added for personal loan

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -87,37 +87,40 @@
   <div id="carosel-home-desk" class="owl-carousel">
     <div class="carosel-imgs img1">
       <div class="txt-carosel-imgs">
-        <h4>Services @ Your Doorstep – Best Offers in Bank Loan, Credit Cards, & Insurance</h4>
         <ul>
-          <li>All types of Loans, Credit Cards, & Insurance</li>
-          <li>We serve Salaried individuals, Start-ups, & Entrepreneurs</li>
-          <li>We assist in documentation</li>
-          <li>We come to handover policy</li>
-          <li>We help you to settle claims</li>
-          <li>Help with Credit Score</li>
+          <li>Personalized service to help you procure loan!</li>
+          <li>Personalized assistance & advise before applying for any kind of loan</li>
+          <li>Quickest, Easiest, & Safest place to apply for loans</li>
           <li>Call to talk to us <a href="tel:+918806644344">+91-88066-44344</a></li>
         </ul>
       </div>
     </div>
     <div class="carosel-imgs img2">
       <div class="txt-carosel-imgs">
-        <h4>Personalized consultation & other services</h4>
-        <h4>Our Relationship Manager will visit your office or home</h4>
         <ul>
-          <li>To make a presentation</li>
-          <li>Collect documents</li>
-          <li>Get signatures</li>
-          <li>Handover policy</li>
-          <li>Settle claims</li>
+          <li>Get the most reliable assistance to procure loan, Insurance, and more...</li>
+          <li>Loans, life/vehicle insurance, & more! Personalized service at every step</li>
+          <li>Personalized advise & service for each & every client. Loans, insurance, & more...</li>
         </ul>
       </div>
     </div>
-    <!-- <div class="carosel-imgs img3"><%#= image_tag "carosel/desktop/personal-loan-banner.png", alt: "" %></div> -->
   </div>
   <div id="carosel-home-mob" class="owl-carousel">
-    <div class="carosel-imgs img1"></div>
-    <div class="carosel-imgs img2"></div>
-    <!-- <div class="carosel-imgs img3"><%#= image_tag "carosel/mobile/personal-loan-banner.png", alt: "" %></div> -->
+    <div class="carosel-imgs img1">
+      <ul>
+        <li>Personalized service to help you procure loan!</li>
+        <li>Personalized assistance & advise before applying for any kind of loan</li>
+        <li>Quickest, Easiest, & Safest place to apply for loans</li>
+        <li>Call to talk to us <a href="tel:+918806644344">+91-88066-44344</a></li>
+      </ul>      
+    </div>
+    <div class="carosel-imgs img2">
+      <ul>
+        <li>Get the most reliable assistance to procure loan, Insurance, and more...</li>
+        <li>Loans, life/vehicle insurance, & more! Personalized service at every step</li>
+        <li>Personalized advise & service for each & every client. Loans, insurance, & more...</li>
+      </ul>      
+    </div>
   </div>
 </section>
 <section class="content">
@@ -259,7 +262,7 @@
                 <h1 class="product-name">Insurance</h1>
                 <div class="product-icon">
                 <p class="product-desc">Insurance plans with income friendly premiums & easy claims settlement.</p>
-                  <%= image_tag "icons/insurance-icon.svg", class: "insurance-icon" %>
+                  <%= image_tag "icons/insurance-icon.png", class: "insurance-icon" %>
                 </div>
               </div>
             <%end%>
@@ -365,7 +368,7 @@
           <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
             <%= link_to custom_insurance_path, method: :get do %>
               <span class="iconHolder">
-                <%= image_tag "icons/insurance-icon.svg", class: "insurance-icon" %>
+                <%= image_tag "icons/insurance-icon.png", class: "insurance-icon" %>
               </span>
               <span class="pop-city">Insurance</span>
             <%end%>
