--- a/app/views/home/personal_loan.html.erb
+++ b/app/views/home/personal_loan.html.erb
@@ -113,6 +113,112 @@
       <a href="/home/personal_loan">Apply Loan Today</a>
       <p>Fill The form and get the all loan approval as soon as possible!</p>
       <p class="pl-ser"><strong>Checkout our other services:</strong></p><br>
+      <div class="row table-responsive">
+        <table class="table">
+          <tr>
+            <th>Lenders</th>
+            <th>Interest Rate (p.a.)</th>
+            <th>Loan Amount (Max.) in Rs.</th>
+            <th>Repayment Tenure(Months)</th>
+          </tr>
+          <tr>
+            <td>HDFC BANK</td>
+            <td>10.50% onwards</td>
+            <td>50 lakh</td>
+            <td>12 - 60</td>
+          </tr>
+          <tr>
+            <td>AXIS BANK</td>
+            <td>11% onwards</td>
+            <td>50 lakh</td>
+            <td>12 - 60</td>
+          </tr>
+          <tr>
+            <td>YES BANK</td>
+            <td>10.99% onwards</td>
+            <td>40 lakh</td>
+            <td>12 - 72</td>
+          </tr>
+          <tr>
+            <td>ICICI BANK</td>
+            <td>10.75% onwards</td>
+            <td>40 lakh</td>
+            <td>12 - 60</td>
+          </tr>
+          <tr>
+            <td>IDFC FIRST BANK</td>
+            <td>11% onwards</td>
+            <td>40 lakh</td>
+            <td>12 - 60</td>
+          </tr>
+          <tr>
+            <td>BAJAJ FINSERV</td>
+            <td>18% onwards</td>
+            <td>40 lakh</td>
+            <td>12 - 60</td>
+          </tr>
+          <tr>
+            <td>INDUSLND BANK</td>
+            <td>11% onwards</td>
+            <td>40 lakh</td>
+            <td>12 - 60</td>
+          </tr>
+          <tr>
+            <td>ADITYA BIRLA</td>
+            <td>16% onwards</td>
+            <td>40 lakh</td>
+            <td>12 - 84</td>
+          </tr>
+          <tr>
+            <td>TATA CAPITAL</td>
+            <td>12% onwards</td>
+            <td>40 lakh</td>
+            <td>12 - 60</td>
+          </tr>
+          <tr>
+            <td>HERO FINCORP</td>
+            <td>22% onwards</td>
+            <td>5 lakh</td>
+            <td>12 - 60</td>
+          </tr>
+          <tr>
+            <td>FULLERTON INDIA</td>
+            <td>26% onwards</td>
+            <td>30 lakh</td>
+            <td>12 - 60</td>
+          </tr>
+          <tr>
+            <td>INCRED FINANCE</td>
+            <td>23% onwards</td>
+            <td>10 lakh</td>
+            <td>12 - 36</td>
+          </tr>
+          <tr>
+            <td>KOTAK MAHINDRA BANK</td>
+            <td>12% onwards</td>
+            <td>40 lakh</td>
+            <td>12 - 60</td>
+          </tr>
+          <tr>
+            <td>AXIS FINANCE</td>
+            <td>18% onwards</td>
+            <td>30 lakh</td>
+            <td>12 - 60</td>
+          </tr>
+          <tr>
+            <td>PAYSENSE</td>
+            <td>25% onwards</td>
+            <td>10 lakh</td>
+            <td>12 - 60</td>
+          </tr>
+          <tr>
+            <td>PAYSENSE</td>
+            <td>25% onwards</td>
+            <td>10 lakh</td>
+            <td>12 - 60</td>
+          </tr>
+        </table>
+      </div>
     </div>
   </div>
   <div class="row">
