--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -30,19 +30,15 @@
   }
   .txt-carosel-imgs {
     padding: 100px 140px 140px 300px;
-    h4 {
-      font-weight: bold;
-      color: #ed2030;
-      text-shadow: 2px 2px #a9a5a5;
-    }
     ul {
       padding-left: 20px;
+      padding-top: 70px;
       li {
         list-style: none;
-        font-size: 20px;
+        font-size: 25px;
         line-height: 35px;
-        color: #485ed9;
-      }      
+        color: #1c1dc7;
+      }
     }
   }
 }
@@ -52,12 +48,23 @@
   .img1 {
     background: url(./carosel/mobile/credit-card.jpg) top center no-repeat;
     height: 220px;
-    background-size: contain;
+    background-size: contain;   
   }
   .img2 {
     background: url(./carosel/mobile/home-loan.jpg) top center no-repeat;
     height: 220px;
     background-size: contain;
+  }
+  ul {
+    padding-left: 40px;
+    padding-top: 70px;
+    li {
+      list-style: none;
+      font-size: 12px;
+      color: #5e4cee;
+      width: 90%;
+      line-height: 20px;
+    }
   }
 }
 
@@ -157,7 +164,7 @@
     bottom: 30px;
     position: relative;
     font-weight: 600;
-    color: #315fc8;
+    color: #1c1dc7;
     span {
       color: #c7384a;
     }
