(fix) forgot password image changed.

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -176,7 +176,7 @@
 }
 
 #forget-password-section {
-  background-image: url(./forget-password.jpg);
+  background-image: url(./forget-password.png);
   height: 430px;
   background-size: cover;
   background-repeat: no-repeat;
