(Fixed) otp issue.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -88,19 +88,16 @@
     <div class="carosel-imgs img1">
       <div class="txt-carosel-imgs">
         <ul>
-          <li>Personalized service to help you procure loan!</li>
-          <li>Personalized assistance & advise before applying for any kind of loan</li>
-          <li>Quickest, Easiest, & Safest place to apply for loans</li>
-          <li>Call to talk to us <a href="tel:+918806644344">+91-88066-44344</a></li>
+          <li>Personalized service to help you procure credit card!</li>
+          <li><a class="btn btn-custom" href="/home/credit_card">Apply</a></li>
         </ul>
       </div>
     </div>
     <div class="carosel-imgs img2">
       <div class="txt-carosel-imgs">
         <ul>
-          <li>Get the most reliable assistance to procure loan, Insurance, and more...</li>
-          <li>Loans, life/vehicle insurance, & more! Personalized service at every step</li>
-          <li>Personalized advise & service for each & every client. Loans, insurance, & more...</li>
+          <li>Get the most reliable assistance to procure home loan!</li>
+          <li><a class="btn btn-custom" href="/home/home_loan">Apply</a></li>
         </ul>
       </div>
     </div>
@@ -108,17 +105,14 @@
   <div id="carosel-home-mob" class="owl-carousel">
     <div class="carosel-imgs img1">
       <ul>
-        <li>Personalized service to help you procure loan!</li>
-        <li>Personalized assistance & advise before applying for any kind of loan</li>
-        <li>Quickest, Easiest, & Safest place to apply for loans</li>
-        <li>Call to talk to us <a href="tel:+918806644344">+91-88066-44344</a></li>
+        <li>Personalized service to help you procure credit card!</li>
+        <li><a href="/home/credit_card">Apply</a></li>
       </ul>      
     </div>
     <div class="carosel-imgs img2">
       <ul>
-        <li>Get the most reliable assistance to procure loan, Insurance, and more...</li>
-        <li>Loans, life/vehicle insurance, & more! Personalized service at every step</li>
-        <li>Personalized advise & service for each & every client. Loans, insurance, & more...</li>
+        <li>Get the most reliable assistance to procure home loan!</li>
+        <li><a href="/home/home_loan">Apply</a></li>
       </ul>      
     </div>
   </div>
