--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -30,14 +30,19 @@
   }
   .txt-carosel-imgs {
     padding: 100px 140px 140px 300px;
+    a {
+      color: #fff;
+      width: 10%;
+    }
     ul {
       padding-left: 20px;
       padding-top: 70px;
       li {
         list-style: none;
-        font-size: 25px;
+        font-size: 35px;
         line-height: 35px;
         color: #1c1dc7;
+        margin-bottom: 40px;
       }
     }
   }
@@ -56,13 +61,13 @@
     background-size: contain;
   }
   ul {
-    padding-left: 40px;
-    padding-top: 70px;
+    padding-left: 60px;
+    padding-top: 100px;
     li {
       list-style: none;
       font-size: 12px;
       color: #5e4cee;
-      width: 90%;
+      width: 55%;
       line-height: 20px;
     }
   }
