--- a/app/views/loan_against_property/step1.html.erb
+++ b/app/views/loan_against_property/step1.html.erb
@@ -78,7 +78,7 @@
               <%= f.number_field(:otp, class: "form-control", value: "", placeholder: "OTP") %>
             </div> 
             <button type="submit" class="btn btn-custom">Submit</button>
-            <a href="javascript:void(o)" id="home-loan-resend-otp" style="float: right;">Resend</a>
+            <a href="javascript:void(o)" id="loan-against-property-resend-otp" style="float: right;">Resend</a>
           </div>
           <div class="col-md-4"></div>
         </div>
