--- a/app/views/used_car_loan/step1.html.erb
+++ b/app/views/used_car_loan/step1.html.erb
@@ -93,7 +93,7 @@
           <div class="col-md-4"></div>
           <div class="col-md-4">
             <div class="form-group">
-              <%= f.number_field(:otp, class: "form-control", value: "") %>
+              <%= f.number_field(:otp, class: "form-control", value: "", placeholder: "OTP") %>
             </div> 
             <button type="submit" class="btn btn-custom">Submit</button>
             <a href="javascript:void(o)" id="used-car-loan-resend-otp" style="float: right;">Resend</a>
