(Fixed) sms for apply now and refer and earn

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -88,16 +88,27 @@
     <div class="carosel-imgs img1">
       <div class="txt-carosel-imgs">
         <ul>
-          <li>Personalized service to help you procure credit card!</li>
-          <li><a class="btn btn-custom" href="/home/credit_card">Apply</a></li>
+          <li>
+            <p>Personalized service to help you procure <span>Credit Card!</span></p>
+            <p>
+              <span>Get best credit card offers to match your lifestyle!</span>
+              <a href="/home/credit_card">Apply here</a>
+            </p>
+          </li>
         </ul>
       </div>
     </div>
     <div class="carosel-imgs img2">
       <div class="txt-carosel-imgs">
         <ul>
-          <li>Get the most reliable assistance to procure home loan!</li>
-          <li><a class="btn btn-custom" href="/home/home_loan">Apply</a></li>
+          <li>
+            <p>Get the most reliable assistance to procure <span>Home Loan!</span></p>
+            <p>
+              <span>Get Home Loan from Best Banks, Check Eligibility for Pradhanmantri Awaas Yojana,
+                Documentation, and more..</span>
+              <a href="/home/home_loan">Apply here</a>
+            </p>
+          </li>
         </ul>
       </div>
     </div>
@@ -105,14 +116,14 @@
   <div id="carosel-home-mob" class="owl-carousel">
     <div class="carosel-imgs img1">
       <ul>
-        <li>Personalized service to help you procure credit card!</li>
-        <li><a href="/home/credit_card">Apply</a></li>
+        <li>Personalized service to help you procure <span>Credit Card!</span></li>
+        <li><a href="/home/credit_card">Apply here</a></li>
       </ul>      
     </div>
     <div class="carosel-imgs img2">
       <ul>
-        <li>Get the most reliable assistance to procure home loan!</li>
-        <li><a href="/home/home_loan">Apply</a></li>
+        <li>Get the most reliable assistance to procure <span>Home Loan!</span></li>
+        <li><a href="/home/home_loan">Apply here</a></li>
       </ul>      
     </div>
   </div>
