--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -30,19 +30,29 @@
   }
   .txt-carosel-imgs {
     padding: 100px 140px 140px 300px;
-    a {
-      color: #fff;
-      width: 10%;
-    }
     ul {
       padding-left: 20px;
-      padding-top: 70px;
+      padding-top: 120px;
       li {
         list-style: none;
         font-size: 35px;
         line-height: 35px;
         color: #1c1dc7;
         margin-bottom: 40px;
+        font-weight: bold;
+        span {
+          color: #ed2030;
+        }
+        p:nth-child(2) {
+          font-size: 20px;
+          span {
+            opacity: .6;
+            color: #052f5f;
+          }
+        }
+        p {
+          margin: 0;
+        }
       }
     }
   }
