--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -91,8 +91,8 @@
           <li>
             <p>Personalized service to help you procure <span>Credit Card!</span></p>
             <p>
-              <span>Get best credit card offers to match your lifestyle!</span>
-              <a href="/home/credit_card">Apply here</a>
+              <span>Best credit card offers to match your lifestyle!</span>
+              <a  class="btn btn-custom" href="/home/credit_card">Check Now</a>
             </p>
           </li>
         </ul>
@@ -104,9 +104,8 @@
           <li>
             <p>Get the most reliable assistance to procure <span>Home Loan!</span></p>
             <p>
-              <span>Get Home Loan from Best Banks, Check Eligibility for Pradhanmantri Awaas Yojana,
-                Documentation, and more..</span>
-              <a href="/home/home_loan">Apply here</a>
+              <span>Home Loan from Best Banks, Check Eligibility for Pradhanmantri Awaas Yojana.</span>
+              <a class="btn btn-custom" href="/home/home_loan">Check Now</a>
             </p>
           </li>
         </ul>
@@ -117,13 +116,13 @@
     <div class="carosel-imgs img1">
       <ul>
         <li>Personalized service to help you procure <span>Credit Card!</span></li>
-        <li><a href="/home/credit_card">Apply here</a></li>
+        <li><a href="/home/credit_card">Check Now</a></li>
       </ul>      
     </div>
     <div class="carosel-imgs img2">
       <ul>
         <li>Get the most reliable assistance to procure <span>Home Loan!</span></li>
-        <li><a href="/home/home_loan">Apply here</a></li>
+        <li><a href="/home/home_loan">Check Now</a></li>
       </ul>      
     </div>
   </div>
