--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -29,7 +29,7 @@
     margin-top: 70px;
   }
   .txt-carosel-imgs {
-    padding: 100px 140px 140px 300px;
+    padding: 80px 140px 140px 150px;
     ul {
       padding-left: 20px;
       padding-top: 120px;
@@ -45,6 +45,10 @@
         }
         p:nth-child(2) {
           font-size: 20px;
+          padding-top: 15px;
+          a {
+            color: #fff;
+          }
           span {
             opacity: .6;
             color: #052f5f;
