--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -266,8 +266,9 @@
             <div class="logo-footer margin-bottom-20 md-margin-bottom-20 sm-margin-bottom-10 xs-margin-bottom-20">
               <a href="#">
                 <%= image_tag "logo2.png", alt: "logo2" %>
+              </a>
             </div>
-            <p>Copyright &copy; <%= "#{Time.zone.now.year}" %> Growwcapital.com. All rights reserved.</p>
+            <p>Copyright &copy; <%= "#{Time.zone.now.year}" %> <a href="https://digitalweblix.com/">digitalweblix.com</a>. All rights reserved.</p>
           </div>
           <div class="col-lg-8 col-md-6 col-sm-6 col-xs-12 social-media-icons">
             <ul class="social margin-bottom-25 md-margin-bottom-25 sm-margin-bottom-20 xs-margin-bottom-20 xs-padding-top-10 clearfix">
